--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["client", "client/context/MesCompContext.ts"],
+  "include": ["client"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
