--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/nodemailer": "^6.4.15",
     "@types/postcss-import": "^14.0.3",
     "@types/react": "^18.2.53",
     "@types/react-dom": "^18.2.18",
@@ -74,6 +75,7 @@
     "cookie": "^0.6.0",
     "date-and-time": "^3.1.1",
     "dotenv": "^16.4.1",
+    "ejs": "^3.1.10",
     "emoji-picker-react": "^4.9.2",
     "fastify": "^4.26.0",
     "fastify-plugin": "^4.5.1",
@@ -84,6 +86,7 @@
     "lightningcss": "^1.23.0",
     "lucide-react": "^0.378.0",
     "mongodb": "^6.3.0",
+    "nodemailer": "^6.9.13",
     "peerjs": "^1.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
