--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/server/serverless.ts"
+      "destination": "/api/serverless.ts"
     }
   ]
 }
