--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "CommonJS",
+    "target": "ES2021",
+    "module": "commonjs",
     "outDir": "./build",
     "rootDir": "./test",
     // "moduleResolution": "NodeNext",
@@ -17,7 +17,8 @@
     "noUnusedLocals": true,
     // "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "strict": false
+    "strict": false,
+    "skipLibCheck": true
   },
   "include": ["./test"],
   "exclude": ["node_modules", "dist", "client"]
