--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Bryan Gonzales",
   "license": "ISC",
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.5",
