--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "outputDirectory": "build",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/api/serverless.ts"
-    }
-  ]
+  "outputDirectory": "client/dist"
 }
